chore: add dockerfile
