# public/swagger.json
@@ -89,6 +89,66 @@
 	},
 	"openapi": "3.0.0",
 	"paths": {
+		"/health/ready": {
+			"get": {
+				"operationId": "Ready",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"properties": {
+										"status": {
+											"type": "string"
+										}
+									},
+									"required": [
+										"status"
+									],
+									"type": "object"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"health"
+				],
+				"security": [],
+				"parameters": []
+			}
+		},
+		"/health/live": {
+			"get": {
+				"operationId": "Live",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"properties": {
+										"status": {
+											"type": "string"
+										}
+									},
+									"required": [
+										"status"
+									],
+									"type": "object"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"health"
+				],
+				"security": [],
+				"parameters": []
+			}
+		},
 		"/products": {
 			"post": {
 				"operationId": "CreateProduct",
